[project]
name = "metrics-processor"
description = "An agent to process metrics"
dynamic = ["version"]

readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "tomli >= 1.1.0 ; python_version < '3.11'",
  "prometheus_client>=0.20.0",
  "buffered @ git+https://github.com/generalmattza/buffered.git@v1.0.1",
]

# If a module, then use fetch version from src/module_name/__init__.py
[tool.setuptools.dynamic]
version = { attr = "metrics_processor.__version__" }

[project.optional-dependencies]
test = [
  "pytest >= 8.0.0",
  "mqtt-node-network @ git+https://github.com/generalmattza/mqtt-node-network.git@v1.3.1",
]

[project.urls]
homepage = "https://davidson.engineering"
repository = "https://github.com/davidson-engineering/metrics-processor"
# documentation = "https://readthedocs.org"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
